--- a/front-end/src/component/Modals/Search/Search.css
+++ b/front-end/src/component/Modals/Search/Search.css
@@ -9,17 +9,18 @@
     justify-content: center;
     align-items: center;
     visibility: visible;
-    z-index: 999;
     opacity: 0;
     transition: 0.3s ease all;
 }
 
 .modal-search.show {
+    overflow: hidden;
     visibility: visible;
     opacity: 1;
+    z-index: 999;
 }
 
-.modal-search::after {
+.modal-overlay {
     content: "";
     width: 100%;
     height: 100%;
@@ -28,6 +29,7 @@
     top: 0;
     left: 0;
     opacity: 0.5;
+
 }
 
 .modal-wrapper {
