--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -160,3 +160,6 @@ input[type="number"]::-webkit-inner-spin-button {
   line-height: 0.8;
   margin-bottom: 4px;
 }
+.main-layout{
+  z-index: 3!important;
+}
