--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -160,6 +160,19 @@ input[type="number"]::-webkit-inner-spin-button {
   line-height: 0.8;
   margin-bottom: 4px;
 }
-.main-layout{
-  z-index: 3!important;
+
+.main-layout {
+  z-index: 3 !important;
+}
+
+
+/* react-slick-css */
+
+
+.slick-slide>div {
+  margin: 0 10px;
+}
+
+.slick-list {
+  margin: 0 -10px;
 }
