--- a/front-end/src/component/Modals/Dialog/Dialog.css
+++ b/front-end/src/component/Modals/Dialog/Dialog.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,17 +18,17 @@
     opacity: 1;
   }
   
-  .modal-overlay {
+  /* .modal-overlay {
     content: "";
     width: 100%;
-    height: 100%;
-    background-color: black;
+    /* height: 100%; */
+    /* background-color: black;
     position: fixed;
     top: 0;
     left: 0;
     opacity: 0.5;
-  }
-  
+  } */
+   
   .modal-dialog .modal-content {
     max-width: 800px;
     width: 100%;
