--- a/front-end/src/component/ProductDetails/Tabs/Tabs.css
+++ b/front-end/src/component/ProductDetails/Tabs/Tabs.css
@@ -15,6 +15,7 @@
     border-bottom: 1px solid #dee0ea;
     padding-bottom: 20px;
     margin-bottom: 20px;
+    z-index: 3 !important;
   }
   
   .single-tabs .tab-list a.active {
