--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -176,3 +176,8 @@ input[type="number"]::-webkit-inner-spin-button {
 .slick-list {
   margin: 0 -10px;
 }
+
+.main-app,
+.tab-button {
+  z-index: 9999999999 !important;
+}
