--- a/front-end/src/component/Catagories/CategoriesItem.css
+++ b/front-end/src/component/Catagories/CategoriesItem.css
@@ -1,17 +1,19 @@
 .categories .category-item{
-    background-color: #f5f5f5;
+    background-color: #EFEFEF;
+    border: 1px solid #1367EF;
     border-radius: 4px;
     flex: 1;
     width: 100%;
     display: flex;
     justify-content: center;
+
 }
 
 .categories .category-item a{
     display: inline-block;
     padding: 10px;
     text-align: center;
-    margin: 5px 0;
+    margin: 10px 0;
     font-size: 14px;
     font-weight: 500;
 }
